test/TestSuite/Syntax/Errors/booking_no_leaf.tjp
project test "Test" "1.0" 2007-08-19 +2m 

resource tux "Tux"

task t "T" {
  start 2007-08-19
  task s "S"
}

supplement resource tux {
# MARK: error 12 booking_no_leaf
	booking t 2007-08-25-10:00 +2h
}
